tests/negative/builtin_collision/redefine_abs.nano
# Test: Redefining built-in function (should fail with error)
# Expected error: Cannot redefine built-in function 'abs'

fn abs(x: int) -> int {
    if (< x 0) {
        return (- 0 x)
    } else {
        return x
    }
}

shadow abs {
    assert (== (abs -5) 5)
    assert (== (abs 5) 5)
}

fn main() -> int {
    return (abs -10)
}

shadow main {
    assert (== (main) 10)
}

